syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.teja.grpc.spec";
option java_outer_classname = "FirstProto";

service Simple {
  rpc SayHello (HelloRequest) returns (HelloReply) {
  }
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
